TestRepo2/src/objects/DependentPicklistValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Values that need to be shown on the basis of their picklist name on Digaoe direct and Control market case tab</description>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Name__c</fullName>
        <label>Picklist Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_values__c</fullName>
        <label>Picklist values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dependent picklist values</label>
</CustomObject>